# DigitalStore

./: .gitignore  docker-compose.yml  pyproject.toml
main_application/: .env.template  alembic.ini  main.py
main_application/alembic/: env.py
main_application/alembic/versions/: 0a0193469465_add_is_active_to_user.py  734e678ee13f_create_orders_table.py  825e1ce8b886_create_products_table.py  bdd654f5ef4b_add_password_to_user.py  f3ac1298d6a9_create_users_table.py
main_application/api/: __init__.py
main_application/api/api_v1/: __init__.py  auth_user_api.py  orders.py  product_dependencies.py  products.py  user_dependencies.py  users.py
main_application/auth/: helpers.py  user_auth.py  utils.py
main_application/certs/: private.pem  public.pem
main_application/core/: config.py
main_application/core/models/: __init__.py  db_helper.py  orders.py  product.py  user.py
main_application/core/schemas/: orders.py  products.py  token.py  user.py
main_application/crud/: orders.py  products.py  users.py
main_application/static/: index.html
