[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.14"
fastapi = "^0.136.1"
uvicorn = {extras = ["standart"], version = "^0.46.0"}
pydantic = {extras = ["email"], version = "^2.13.4"}
pydantic-settings = "^2.14.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.49"}
asyncpg = "^0.31.0"
alembic = "^1.18.4"
orjson = "^3.11.9"
pyjwt = {extras = ["crypto"], version = "^2.12.1"}
bcrypt = "^5.0.0"
python-multipart = "^0.0.32"


[dependency-groups]
dev = [
    "black (>=26.3.1,<27.0.0)"
]
